<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginRight="10dip"
        android:layout_toLeftOf="@+id/image"
        android:background="#0099cc"
        android:orientation="vertical"
        android:padding="5dip" >

        
        <LinearLayout
        android:id="@+id/Lin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/activity_main2_button1" 
            android:textOn="@string/activity_main2_button1"/>

        <ToggleButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/activity_main2_button2" 
            android:textOn="@string/activity_main2_button2" />

        <ToggleButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/activity_main2_button3" 
            android:textOn="@string/activity_main2_button3" />

        <ToggleButton
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/activity_main2_button4" 
            android:textOn="@string/activity_main2_button4" />

        <ToggleButton
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/activity_main2_button5" 
            android:textOn="@string/activity_main2_button5" />
    </LinearLayout>
    </LinearLayout>

</ScrollView>